unified_tests/function_calls/call_argument_incomplete_binary_expression/expect/build.text.stderr
lib.copp:6:17: error: expected expression
      _x := f(1 + )
                  ^
lib.copp:9:1: error: expected symbol
  
lib.copp:9:1: error: expected symbol
  
